# amuse

./: .editorconfig  .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  Makefile.in  NOTICE  README.md  README.txt  VERSION  aclocal.m4  amuse_singularity.def  amuserc.example  build.py  build.py.in  config.mk.in  configure  configure.ac  cuda_self_help  debian.py  ez_setup.py  mpi_test.c  pyproject.toml  python3.10.80s-12399,jelmer-laptop.btr  python3.10.80s-12611,jelmer-laptop.btr  python3.10.80s-12828,jelmer-laptop.btr  recommended.txt  requirements.txt  setup  setup.py  slowtests  tox.ini  tutorial
lib/forsockets/support/: aclocal.m4  config.mk.in  configure  configure.ac
lib/sapporo_light/support/: aclocal.m4  config.mk.in  configure  configure.ac
lib/stopcond/support/: aclocal.m4  config.mk.in  configure  configure.ac
src/: pyproject.toml
src/amuse/: SConstruct  __init__.py  amuserc  codes.py  config.py  lab.py  plot.py  plummer_helper.pyx  version.py
src/amuse/community/: Makefile  __init__.py  doit.sh
src/amuse/couple/: bridge.py  bridgev.py  collision_handler.py  encounters.py  energy_bookkeeping.tex  fallback_stellar_evolution.py  multiples.py  parallel_stellar_evolution.py
src/amuse/data/: AMUSE.bib  __init__.py
src/amuse/datamodel/: __init__.py  attributes.py  base.py  code_particles.py  console.py  grid_attributes.py  grids.py  incode_storage.py  indexing.py  memory_storage.py  meshes.py  parameters.py  particle_attributes.py  particles.py  rotation.py  simple_hash.py  staggeredgrid.py  trees.py  values.py
src/amuse/experiments/: SConstruct  bhtc_interface.pyx  plummer.py  plummer_helper.pyx  speed.py
src/amuse/ext/: ClusterCore.py  LagrangianRadii.py  SConstruct  basicgraph.py  bbr_color.txt  boss_bodenheimer.py  bridge.py  bridge_rotational_counterclockwise.py  cloud.py  composition_methods.py  comsystem.py  concurrent.py  cosmo.py  derived_grav_systems.py  evrard_test.py  galactic_potentials.py  kingmodel.py  (+36 more)
src/amuse_adaptb/: Makefile  functions.py  interface.cc
src/amuse_athena/: Makefile  __init__.py  amuse_problem_4.1.c  interface_4.1.c
src/amuse_bhtree/: Makefile
src/amuse_bonsai/: SdkMasterLog.csv  interface.py  libraryInterface.cpp
src/amuse_bonsai2/: README.md  __init__.py  download.py  interface.py  libraryInterface.cpp
src/amuse_brutus/: interface.cc  interface.py
src/amuse_bse/: Makefile  __init__.py  interface.f
src/amuse_capreole/: Makefile  __init__.py  interface.py  readme.txt
src/amuse_etics/: Makefile  README.md  __init__.py  interface.cu  interface.py
src/amuse_evtwin/: Makefile  interface.py
src/amuse_fastkick/: .gitignore  Makefile  cuda_fastkick.cu  cuda_fastkick.h  interface.cc
src/amuse_fi/: Makefile  enable_periodic.patch  interface.f90
src/amuse_fractalcluster/: Makefile  interface.f90
src/amuse_gadget2/: Makefile  README  makefile_options_periodic
src/amuse_galactics/: Makefile  __init__.py  interface.py
src/amuse_hacs64/: Makefile
src/amuse_halogen/: Makefile  __init__.py  interface.h  interface.py
src/amuse_hermite/: Makefile  __init__.py  interface.cc
src/amuse_hermite0/: interface.py
src/amuse_hermite_grx/: .gitignore  Makefile
src/amuse_higpus/: Makefile
src/amuse_hop/: interface.cc  interface.py
src/amuse_huayno/: Makefile  interface.py
src/amuse_kepler/: Makefile  interface.cc  interface.py
src/amuse_kepler_orbiters/: Makefile  interface.py
src/amuse_krome/: Makefile  __init__.py  interface.f90
src/amuse_mameclot/: Makefile
src/amuse_mercury/: Makefile  interface.f90
src/amuse_mesa_r15140/: .gitignore  Makefile  interface.py  run_star_extras.f90
src/amuse_mesa_r2208/: .gitignore  Makefile  interface.py
src/amuse_mi6/: Makefile  interface.cc
src/amuse_mikkola/: .gitignore  Makefile  __init__.py  interface.f90
src/amuse_mmams/: Makefile  interface.cc
src/amuse_mmc/: Makefile_amuse  coreradius.py  interface_orig.py  makeinterface.py
src/amuse_mobse/: interface.f
src/amuse_mocassin/: Makefile  __init__.py  data
src/amuse_mosse/: Makefile  __init__.py  interface.f
src/amuse_mpiamrvac/: .gitignore  Makefile  interface.py
src/amuse_nbody6xx/: Makefile  common6.h  interface_new.py  params.h
src/amuse_octgrav/: Makefile  README  parameters.h
src/amuse_petar/: .gitignore
src/amuse_ph4/: Makefile  __init__.py  interface.cc  interface.py
src/amuse_phantom/: Makefile
src/amuse_phigrape/: Makefile  QUICKSTART.readme  phiGRAPE.readme
src/amuse_pikachu/: interface.cc  interface.py
src/amuse_rebound/: interface.cc  interface.py
src/amuse_sakura/: Makefile  interface.cc
src/amuse_seba/: .gitignore  Makefile  interface.cc  interface.py  toolbox.patch
src/amuse_secularmultiple/: interface.cpp
src/amuse_sei/: example.py  interface.cc
src/amuse_simplex/: Makefile  __init__.py  interface.py
src/amuse_smalln/: Makefile  interface.cc  scatter3.py
src/amuse_sphray/: Makefile  interface.py
src/amuse_sse/: README
src/amuse_symple/: interface.cc
src/amuse_tupan/: .gitignore  Makefile
src/amuse_vader/: .gitignore  DOCU.txt  Makefile  Makefile_vader  __init__.py  interface.py
src/muse/: __init__.py
src/tests/: .gitignore  Makefile
support/: .gitignore  Makefile  __init__.py  aclocal.m4  amuse.mk  background_test.py  build_latex.py  classifiers.py  config.py  configpy.in  configuration.sh.in  configure  configure.ac  continuous_test.html  continuous_test.py  debian.py  dependencies.mk  dependencies.sh  features.mk.in  format.mk  gencode.py  generate_main.py  help.mk  help.sh  lint_check.html  lint_check.py  misc.py  monitor.py  post-commit  project.py  realtime_test.html  realtime_test.py  run_tests.py  setup_codes.py  setup_legacy.py  tracker.py  update_configure_scripts  util.sh  version.py  webserver.py
support/buildbot/: master.cfg
support/setup/: dependencies.sh  environment.sh  format.sh  help.sh  installing.sh  log.sh  testing.sh  util.sh
support/shared/: lib-configure.mk  lib-targets.mk  uninstall.sh  venv.mk  version.mk  version_helper.py
(+7130 files in other folders)
